# HW31

./: db.sqlite3  pyproject.toml  pytest.ini  utils.py
ads/: models.py  permissions.py  serializers.py  urls.py  validtors.py  views.py
ads/migrations/: 0001_initial.py  0002_rename_nane_category_name.py  0003_advertisement.py  0004_alter_advertisement_options_alter_category_options_and_more.py  0005_alter_advertisement_image.py  0006_rename_author_id_advertisement_author_and_more.py
fixtures/: ads.json
hw27/: settings.py  urls.py
hw28/: settings.py  urls.py
hw31/: settings.py  urls.py
tests/: simple_test.py
tests/ads/: selections_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_locations.py  0002_rename_location_id_user_location.py  0003_user_locations.py
